hard-gists/2406a3034b4afb800290/run.log
=== Docker Run Log for 2406a3034b4afb800290 ===
Started at: Mi 29. Okt 13:03:45 CET 2025

[2025-10-29 13:03:45] START: Running container for 2406a3034b4afb800290
[2025-10-29 13:03:45] SUCCESS: Container b347acb18e94083e6026e37ef241846997b41888bce105e242af249246f5b121 started for 2406a3034b4afb800290
=== Container logs for 2406a3034b4afb800290 ===
  File "/snippet.py", line 24
    print "Logging in..."
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2406a3034b4afb800290 ===
[2025-10-29 13:03:47] INFO: Container b347acb18e94083e6026e37ef241846997b41888bce105e242af249246f5b121 has stopped
